metadata description and readme

--- a/svelte/public/index.html
+++ b/svelte/public/index.html
@@ -7,6 +7,7 @@
 	<link rel="icon" type="image/x-icon" href="favicon-32x32.png">
 
 	<title>MAL Map</title>
+	<meta name="description" content="Cluster and visualize relationships between anime on MyAnimeList and AniList">
 
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/svelte-material-ui@6.0.0-beta.6/bare.css" />
