--- a/svelte/public/index.html
+++ b/svelte/public/index.html
@@ -27,6 +27,9 @@
 
 		gtag('config', 'G-GMSDNVRL31');
 	</script>
+
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3457753395037470"
+	crossorigin="anonymous"></script>
 </head>
 
 <body>
