--- a/svelte/public/index.html
+++ b/svelte/public/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon-32x32.png">
 
-	<title>MAL Map</title>
+	<title>Movie Map</title>
 	<meta name="description" content="Cluster and visualize relationships between anime on MyAnimeList and AniList">
 
 
